# servetune

./: .gitattributes  .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
servetune/: __init__.py  cli.py  config.py  core.py  fidelity.py  metrics.py  pareto.py  profiler.py  report.py  search.py
servetune/backends/: __init__.py  _vllm_worker.py  base.py  mock.py  vllm_backend.py
tests/: test_core.py  test_fidelity.py  test_metrics.py  test_search.py  test_vllm_backend.py
