[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "servetune"
version = "0.1.0"
description = "Auto-tuning + fidelity-gated local LLM serving."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Nachiket Lele" }]
keywords = ["llm", "inference", "vllm", "quantization", "speculative-decoding", "autotuning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
gpu = ["torch"]
vllm = ["vllm", "torch", "transformers"]
dev = ["pytest"]

[project.scripts]
servetune = "servetune.cli:main"

[project.urls]
Homepage = "https://github.com/nac7/servetune"
Issues = "https://github.com/nac7/servetune/issues"

[tool.setuptools.packages.find]
include = ["servetune*"]
